# pico-enc28j60

./: CMakeLists.txt
include/pico/enc28j60/: ethernetif_setup.h
src/: ethernetif_setup.c
